--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/blueYOSHI9000/SchwiRSS#readme",
   "dependencies": {
     "discord.js": "^12.3.1",
+    "discord.js-commando": "github:discordjs/Commando",
     "rss-parser": "^3.9.0"
   }
 }
