Add tutorial on how to run Schwi on startup
Added: tutorial on how to run Schwi on startup alongside required files to do so
Fixed: Basic commands not working anymore. Yep, you read that right, this is a bot has the bare minimum to barely even qualify as a bot and it's already bugged. Amazing.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ __pycache__/
 /settings/token.json
 /settings/database.json
 /settings/log.txt
+/run_on_startup/windows_run_on_startup.bat
+/run_on_startup/SchwiRSS.vbs
