--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ attrs==20.3.0
 chardet==3.0.4
 discord==1.0.1
 discord.py==1.6.0
+feedparser==6.0.2
 idna==3.1
 multidict==5.1.0
+sgmllib3k==1.0.0
 typing-extensions==3.7.4.3
 yarl==1.6.3
