--- a/settings/config.docs.json
+++ b/settings/config.docs.json
@@ -9,13 +9,18 @@
 	},
 	"rss": {
 		"interval": 30,//the interval in which the bot checks for new articles - time is in minutes - must be at least 10
-		"scanDelay": 1000//delay between feed scans - time is in milliseconds
+		"scanDelay": 1000,//delay between feed scans - time is in milliseconds
+		"postDelay": 500,//delay between feed posts - time is in milliseconds
+        "combinePosts": 1,//If there are more posts than this from a single feed then all subsequent posts will get combined into one (if there are 3 new posts and this is set to 1 then the first will get posted normally, the rest gets combined into a "...and 2 more posts" - set to 0 to disable)
+        "oldestFirst": true,//posts the oldest items first
+        "dateFormat": "%a %d %b %Y at %I:%M%p"//the date format that's used, formatted using pythons time.strftime() function (see https://docs.python.org/2/library/time.html#time.strftime)
 	},
 	"log": {
 		"level": "info",//what level should be output, can be one of the following: "debug" > "spamInfo" > "info"  > "warn" > "silent" -- "spamInfo" is basically the same as "info" except a lot more spammy at times, will post every single feed being parsed along other things
 		"discordLogOutput": false,//if logs should be output to discord as well (note: will not output spamInfo and below)
 		"discordLogChannel": "<channel ID>",//the channel the logs should be posted to
 		"discordLogLevelOverwrite": "",//overwrites the log level for discord logs - will not accept spamInfo and below - leave empty if normal log level should be used.
+        "logTimeOnDiscord": false,//if the time should be included in the discord logs
 		"logFileMaxLines": 200//max numbers of lines allowed in the log.txt file - note: read/writing is not optimized so huge files could take a while to read/write to
 	},
 	"fixed": { //do not change anything in here - this is only for the bot itself
