Add command to add a feed
- Added: schwi.add to add a new feed

--- a/settings/config.example.json
+++ b/settings/config.example.json
@@ -8,6 +8,9 @@
 		"activityName": "schwi.help",
 		"activityURL": ""
 	},
+    "permissions": {
+    	"editFeeds": "manage_channels"
+    },
 	"rss": {
 		"interval": 30,
 		"scanDelay": 1000,
