--- a/settings/config.docs.json
+++ b/settings/config.docs.json
@@ -1,12 +1,15 @@
 {
 	"bot": {
 		"owners": ["<user ID>", "<second user ID>"],//User IDs that should get access to bot owner commands
-		"prefix": ["schwi."],//the bots prefix, can be multiple
+		"prefix": ["schwi."],//the bots prefix
 		"status": "online",//the status the bot should use, can be "online", "idle", "dnd" (do not disturb) or "invisible".
 		"activityType": "listening",//the activity type the bot should use, can be "PLAYING", "WATCHING", "LISTENING" or "STREAMING".
 		"activityName": "schwi.help",//the activity name the bot should use.
 		"activityURL": ""//---currently unused due to issues with it--- the stream URL in case the "STREAMING" activity type is used. Can only be Twitch or YouTube links.
 	},
+    "permissions": {//available permissions are listed here: https://discordpy.readthedocs.io/en/latest/api.html#discord.Permissions
+    	"editFeeds": "manage_channels"//permission to add/edit/remove feeds
+    },
 	"rss": {
 		"interval": 30,//the interval in which the bot checks for new articles - time is in minutes - must be at least 10 -- requires a restart
 		"scanDelay": 1000,//delay between feed scans - time is in milliseconds
