--- a/settings/config.example.json
+++ b/settings/config.example.json
@@ -10,6 +10,7 @@
 		"embedColor": ""
 	},
     "permissions": {
+    	"scanFeeds": "send_messages",
     	"editFeeds": "manage_channels"
     },
 	"rss": {
