--- a/settings/config.example.json
+++ b/settings/config.example.json
@@ -21,6 +21,16 @@
         "oldestFirst": true,
         "dateFormat": "%a %d %b %Y at %I:%M%p"
 	},
+    "RPC": {
+        "autoRestart": true,
+        "interval": 5,
+        "displayStartTime": true,
+        "RetroAchievements": {
+            "displayGameName": true,
+            "displaySmallImage": true,
+            "smallImageText": "RetroAchievements"
+        }
+    },
 	"log": {
 		"level": "info",
 		"discordLogOutput": false,
