Add option to display amount of RA cheevos earned
- Added: RPC > RetroAchievements > displayAchievementsGotten option to display the amount of Achievements gotten in the current game

--- a/settings/config.example.json
+++ b/settings/config.example.json
@@ -27,6 +27,7 @@
         "displayStartTime": true,
         "RetroAchievements": {
             "displayGameName": true,
+            "displayAchievementsGotten": true,
             "displaySmallImage": true,
             "smallImageText": "RetroAchievements"
         }
