--- a/settings/config.docs.json
+++ b/settings/config.docs.json
@@ -26,6 +26,7 @@
         "displayStartTime": true,//Displays the start time, starts when schwi.startrpc is used (time can be reset using schwi.resetrpctime)
         "RetroAchievements": {//settings only used for the RetroAchievements rich presences
             "displayGameName": false,//whether the game name should be displayed (the game name can always be displayed by hovering over the cover art if one is used)
+            "displayAchievementsGotten": true,//whether it should get the amount of achievemnts gotten (displays before the Game Name - ignores whether they've been gotten with Hardcore or not)
             "displaySmallImage": true,//displays a small image with the name 'ra' - intended to be the RetroAchievements logo
             "smallImageText": "RetroAchievements"//the text that gets displayed when hovering over the small image
         }
