--- a/settings/config.example.json
+++ b/settings/config.example.json
@@ -19,8 +19,7 @@
 		"postDelay": 500,
         "combinePosts": 1,
         "oldestFirst": true,
-        "dateFormat": "%a %d %b %Y at %I:%M%p",
-        "duplicatePreventionAmount": 10
+        "dateFormat": "%a %d %b %Y at %I:%M%p"
 	},
     "RPC": {
         "autoRestart": true,
