--- a/settings/config.example.json
+++ b/settings/config.example.json
@@ -21,9 +21,13 @@
         "oldestFirst": true,
         "dateFormat": "%a %d %b %Y at %I:%M%p"
 	},
+    "reminders": {
+        "interval": 2,
+        "timezone": ""
+    },
     "RPC": {
         "autoRestart": true,
-        "interval": 5,
+        "interval": 2,
         "displayStartTime": true,
         "RetroAchievements": {
             "displayGameName": true,
